cmake_minimum_required(VERSION 3.10)
project(c_practice C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(program src/chapter1_exercises/main.c)
add_executable(chapter1 src/chapter1_exercises/Chapter1.c)
add_executable(exercise1_2 src/chapter1_exercises/exercise1_2.c)
add_executable(test src/chapter1_exercises/test.c)
add_executable(exercise1_3 src/chapter1_exercises/exercise1_3.c)
add_executable(exercise1_4 src/chapter1_exercises/exercise1_4.c)
add_executable(exercise1_5 src/chapter1_exercises/exercise1_5.c)
add_executable(exercise1_6 src/chapter1_exercises/exercise1_6.c)
add_executable(exercise1_7 src/chapter1_exercises/exercise1_7.c)
add_executable(exercise1_8 src/chapter1_exercises/exercise1_8.c)
add_executable(exercise1_9 src/chapter1_exercises/exercise1_9.c)
add_executable(exercise1_10 src/chapter1_exercises/exercise1_10.c)
add_executable(exercise1_11 src/chapter1_exercises/exercise1_11.c)
add_executable(exercise1_12 src/chapter1_exercises/exercise1_12.c)
add_executable(exercise1_13 src/chapter1_exercises/exercise1_13.c)
add_executable(exercise1_14 src/chapter1_exercises/exercise1_14.c)
add_executable(exercise1_15 src/chapter1_exercises/exercise1_15.c)
add_executable(exercise1_16 src/chapter1_exercises/exercise1_16.c)
add_executable(exercise1_17 src/chapter1_exercises/exercise1_17.c)
add_executable(exercise1_18 src/chapter1_exercises/exercise1_18.c)
add_executable(exercise1_19 src/chapter1_exercises/exercise1_19.c)
add_executable(exercise1_20 src/chapter1_exercises/exercise1_20.c)
add_executable(exercise1_21 src/chapter1_exercises/exercise1_21.c)
add_executable(exercise1_22 src/chapter1_exercises/exercise1_22.c)
add_executable(exercise1_23 src/chapter1_exercises/exercise1_23.c)
add_executable(exercise1_24 src/chapter1_exercises/exercise1_24.c)


