cmake_minimum_required(VERSION 3.10)
project(c_practice C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(program src/chapter1_exercises/main.c)
add_executable(chapter1 src/chapter1_exercises/Chapter1.c)
add_executable(exercise1_2 src/chapter1_exercises/exercise1_2.c)
add_executable(test src/chapter1_exercises/test.c)
add_executable(exercise1_3 src/chapter1_exercises/exercise1_3.c)
add_executable(exercise1_4 src/chapter1_exercises/exercise1_4.c)
add_executable(exercise1_5 src/chapter1_exercises/exercise1_5.c)
add_executable(exercise1_6 src/chapter1_exercises/exercise1_6.c)
add_executable(exercise1_7 src/chapter1_exercises/exercise1_7.c)
add_executable(exercise1_8 src/chapter1_exercises/exercise1_8.c)
add_executable(exercise1_9 src/chapter1_exercises/exercise1_9.c)
add_executable(exercise1_10 src/chapter1_exercises/exercise1_10.c)
add_executable(exercise1_11 src/chapter1_exercises/exercise1_11.c)
add_executable(exercise1_12 src/chapter1_exercises/exercise1_12.c)
add_executable(exercise1_13 src/chapter1_exercises/exercise1_13.c)
add_executable(exercise1_14 src/chapter1_exercises/chapter1_1-7_code.c)


